fix: avatar position on mobile

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -8,17 +8,7 @@
     }
 }
 
-.avatar {
-    position: sticky;
-    height: fit-content;
-    top: var(--static-space-64);
-}
-
 @media (max-width: breakpoints.$s) {
-    .avatar {
-        top: auto;
-    }
-
     .textAlign {
         text-align: center;
     }
